--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,53 @@
+# -------------------------------------------------------------------
+# ✅ Force HTTPS and WWW (redirect all to https://www.example.com)
+# -------------------------------------------------------------------
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteCond %{HTTPS} off [OR]
+
+# Redirect to HTTPS and add WWW if missing
+RewriteCond %{HTTPS} !=on [OR]
 RewriteCond %{HTTP_HOST} !^www\. [NC]
 RewriteCond %{HTTP_HOST} ^(?:www\.)?(.+)$ [NC]
-RewriteRule ^ https://www.%1%{REQUEST_URI} [L,NE,R=301]
+RewriteRule ^ https://www.%1%{REQUEST_URI} [L,R=301,NE]
 </IfModule>
 
-# php -- BEGIN cPanel-generated handler, do not edit
-# Set the “ea-php71” package as the default “PHP” programming language.
-<IfModule mime_module>
-  AddHandler application/x-httpd-ea-php71 .php .php7 .phtml
+# -------------------------------------------------------------------
+# ✅ Security Headers (basic protection)
+# -------------------------------------------------------------------
+<IfModule mod_headers.c>
+  # Prevent MIME sniffing
+  Header set X-Content-Type-Options "nosniff"
+  # Prevent clickjacking
+  Header always append X-Frame-Options SAMEORIGIN
+  # Basic XSS protection
+  Header set X-XSS-Protection "1; mode=block"
 </IfModule>
-# php -- END cPanel-generated handler, do not edit
+
+# -------------------------------------------------------------------
+# ✅ Disable Directory Listing (for security)
+# -------------------------------------------------------------------
+Options -Indexes
+
+# -------------------------------------------------------------------
+# ✅ GZIP Compression (faster loading)
+# -------------------------------------------------------------------
+<IfModule mod_deflate.c>
+  AddOutputFilterByType DEFLATE text/plain text/html text/xml text/css text/javascript application/javascript application/json
+</IfModule>
+
+# -------------------------------------------------------------------
+# ✅ Browser Caching (improve performance)
+# -------------------------------------------------------------------
+<IfModule mod_expires.c>
+  ExpiresActive On
+  ExpiresByType image/jpg "access plus 1 year"
+  ExpiresByType image/jpeg "access plus 1 year"
+  ExpiresByType image/png "access plus 1 year"
+  ExpiresByType image/gif "access plus 1 year"
+  ExpiresByType image/webp "access plus 1 year"
+  ExpiresByType text/css "access plus 1 month"
+  ExpiresByType text/javascript "access plus 1 month"
+  ExpiresByType application/javascript "access plus 1 month"
+  ExpiresByType image/x-icon "access plus 1 year"
+  ExpiresDefault "access plus 7 days"
+</IfModule>
