--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,14 @@
+RewriteEngine On
+
+# Redirect non-www to www and enforce HTTPS
+RewriteCond %{HTTP_HOST} ^indygreentech\.com$ [NC]
+RewriteRule ^ https://www.indygreentech.com%{REQUEST_URI} [L,R=301]
+
+# Optional: ensure HTTPS for www as well
+RewriteCond %{HTTPS} off
+RewriteCond %{HTTP_HOST} ^www\.indygreentech\.com$ [NC]
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
 <IfModule mod_expires.c>
   ExpiresActive On
   ExpiresByType image/webp "access plus 30 days"
